kubernetes/k8s/accountsdb.yml
apiVersion: v1
kind: Service
metadata:
  name: accountsdb
  labels:
    app: accountsdb
spec:
  ports:
    - port: 3306
  clusterIP: None
  selector:
    app: accountsdb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: accountsdb
spec:
  selector:
    matchLabels:
      app: accountsdb
  serviceName: "accountsdb"
  replicas: 3
  template:
    metadata:
      labels:
        app: accountsdb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: accountsdb
        image: mysql:8.0
        ports:
        - containerPort: 3306
          name: accountsdb 
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
