kubernetes/k8s/cards.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cards-deployment
  labels:
    app: cards
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cards
  template:
    metadata:
      labels:
        app: cards
    spec:
      containers:
      - name: cards
        image: r.edu.codespring.ro/training-assets/kubernetes-fozocskek/cards:v6
        ports:
        - containerPort: 8082
      imagePullSecrets:
        - name: registry-credential
---
apiVersion: v1
kind: Service
metadata:
  name: cards
spec:
  selector:
    app: cards
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
