kubernetes/k8s/eurekaserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eurekaserver-deployment
  labels:
    app: eurekaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eurekaserver
  template:
    metadata:
      labels:
        app: eurekaserver
    spec:
      containers:
      - name: eurekaserver
        image: r.edu.codespring.ro/training-assets/kubernetes-fozocskek/eurekaserver:v6
        ports:
        - containerPort: 8070
      imagePullSecrets:
        - name: registry-credential
---
apiVersion: v1
kind: Service
metadata:
  name: eurekaserver
spec:
  selector:
    app: eurekaserver
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8070
      targetPort: 8070
