kubernetes/k8s/loans.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loans-deployment
  labels:
    app: loans
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loans
  template:
    metadata:
      labels:
        app: loans
    spec:
      containers:
      - name: loans
        image: r.edu.codespring.ro/training-assets/kubernetes-fozocskek/loans:v6
        ports:
        - containerPort: 8083
      imagePullSecrets:
        - name: registry-credential
---
apiVersion: v1
kind: Service
metadata:
  name: loans
spec:
  selector:
    app: lonas
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
