kubernetes/k8s/loansdb.yml
apiVersion: v1
kind: Service
metadata:
  name: loansdb
  labels:
    app: loansdb
spec:
  ports:
    - port: 3306
  clusterIP: None
  selector:
    app: loansdb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loansdb
spec:
  selector:
    matchLabels:
      app: loansdb
  serviceName: "loansdb"
  replicas: 3
  template:
    metadata:
      labels:
        app: loansdb
    spec:
      containers:
      - name: loansdb
        image: mysql:8.0
        ports:
        - containerPort: 3306
          name: loansdb 
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
