kubernetes/k8s/gateway-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatewayserver-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  # - host: example.com
  - http:
      paths:
      - path: /easyBank
        pathType: Prefix
        backend:
          service:
            name: gatewayserver
            port:
              number: 8072
